--- a/src/client/index.html.hbs
+++ b/src/client/index.html.hbs
@@ -14,7 +14,7 @@
 
 
 
-     <rapi-doc spec-url = "/counterfact/openapi"> 
+     <rapi-doc spec-url="/counterfact/openapi" show-method-in-nav-bar="as-colored-block" nav-active-item-marker="left-bar" use-path-in-nav-bar="true"> 
 
       <div slot="overview" style="background-color: #eee">
         <p>Put an explanation of Counterfact here.</p>
