Fix GitHub spelling

--- a/src/client/index.html.hbs
+++ b/src/client/index.html.hbs
@@ -132,7 +132,7 @@ it up later. In the mean time, I welcome pull requests. :)
       <a href="./swagger" class="button" target="_blank">Swagger UI</a>
       <a href="{{openApiHref}}" class="button" target="_blank">OpenAPI</a>
       <a href="https://counterfact.dev/docs/usage.html" target="_blank">Usage Guide</a>
-      <a href="https://github.com/pmcelhaney/counterfact" target="_blank">Github</a>
+      <a href="https://github.com/pmcelhaney/counterfact" target="_blank">GitHub</a>
     </div>
 
 
