fix vscode link on windows - fixes #1058

--- a/src/client/index.html.hbs
+++ b/src/client/index.html.hbs
@@ -230,7 +230,7 @@ it up later. In the mean time, I welcome pull requests. :)
         <td class="method-identifier" title="{{route.methods.PUT}}">{{#if route.methods.PUT }}⚪️{{/if}}</td>
         <td class="method-identifier" title="{{route.methods.DELETE}}">{{#if route.methods.DELETE }}⚪️{{/if}}</td>
         <td class="method-identifier" title="{{route.methods.PATH}}">{{#if route.methods.PATCH }}⚪️{{/if}}</td>
-        <td class="path"><a href="vscode://file{{../basePath}}/routes{{route.path}}.ts">{{route.path}}</a></td>
+        <td class="path"><a href="vscode://file/{{../basePath}}/routes{{route.path}}.ts">{{route.path}}</a></td>
       </tr>
       {{/each}}
       </tbody>
